--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,3 @@
 PORT = 2121
-DB_STRING = mongodb+srv://demo:demo@cluster0.nfzrd.mongodb.net/todolist?retryWrites=true&w=majority
+# DB_STRING = mongodb+srv://akuakonadu:akuakonadu@cluster0.5j77dvh.mongodb.net/?retryWrites=true&w=majority
+ DB_STRING = mongodb://localhost:27017/
