--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "todolist-review-app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -13,8 +12,9 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongodb": "^3.6.5",
-    "mongoose": "^5.12.3",
+    "mongodb": "^3.7.4",
+    "mongoose": "^5.13.21",
     "nodemon": "^2.0.7"
-  }
+  },
+  "description": ""
 }
